--- a/core/tokens/m2/mdc/_fab.scss
+++ b/core/tokens/m2/mdc/_fab.scss
@@ -6,17 +6,6 @@
 // The prefix used to generate the fully qualified name for tokens in this file.
 $prefix: (mdc, fab);
 
-// Tokens that can't be configured through Angular Material's current theming API,
-// but may be in a future version of the theming API.
-//
-// Tokens that are available in MDC, but not used in Angular Material should be mapped to `null`.
-// `null` indicates that we are intentionally choosing not to emit a slot or value for the token in
-// our CSS.
-$height: 56px;
-$mini-height: 40px;
-$shape-radius: 50%;
-$ripple-target: '.mdc-fab__ripple';
-
 @function get-unthemable-tokens() {
   @return (
     container-shape: 50%,
